// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductImage /> inner shadow should apply it to the image when the hook says yes 1`] = `
<Fragment>
  <Portal
    name="component.product-image.before"
    props={
      {
        "ratio": null,
        "resolutions": [
          {
            "height": 440,
            "width": 440,
          },
        ],
        "src": "http://placehold.it/300x300",
      }
    }
  />
  <Portal
    name="component.product-image"
    props={
      {
        "ratio": null,
        "resolutions": [
          {
            "height": 440,
            "width": 440,
          },
        ],
        "src": "http://placehold.it/300x300",
      }
    }
  >
    <div
      className="sg-1ffblid-rounded engage__product__product-image"
    >
      <Image
        aria-hidden={true}
        backgroundColor="var(--sg-palette-common-white)"
        className="sg-ff8tgd-innerShadow"
        placeholder={
          <div
            aria-hidden={true}
            className="sg-1k7fitm-placeholderContent"
            data-test-id="placeHolder"
          >
            <Placeholder
              className="sg-1ut7txd-placeholder"
            />
          </div>
        }
        placeholderSrc={null}
        ratio={null}
        resolutions={
          [
            {
              "height": 440,
              "width": 440,
            },
          ]
        }
        src="http://placehold.it/300x300"
      />
    </div>
  </Portal>
  <Portal
    name="component.product-image.after"
    props={
      {
        "ratio": null,
        "resolutions": [
          {
            "height": 440,
            "width": 440,
          },
        ],
        "src": "http://placehold.it/300x300",
      }
    }
  />
</Fragment>
`;

exports[`<ProductImage /> inner shadow should apply it to the placeholder when the hook says yes 1`] = `
<Fragment>
  <Portal
    name="component.product-image.before"
    props={null}
  />
  <Portal
    name="component.product-image"
    props={null}
  >
    <div
      className="sg-1ffblid-rounded engage__product__product-image"
    >
      <Image
        aria-hidden={true}
        backgroundColor="var(--sg-palette-common-white)"
        className="sg-ff8tgd-innerShadow"
        placeholder={
          <ProductImagePlaceholder
            noBackground={false}
            showInnerShadow={true}
            src="http://placehold.it/300x300"
          />
        }
        placeholderSrc="http://placehold.it/300x300"
        ratio={null}
        resolutions={
          [
            {
              "height": 440,
              "width": 440,
            },
          ]
        }
      />
    </div>
  </Portal>
  <Portal
    name="component.product-image.after"
    props={null}
  />
</Fragment>
`;

exports[`<ProductImage /> inner shadow should not apply it to the image when the hook says no 1`] = `
<Fragment>
  <Portal
    name="component.product-image.before"
    props={
      {
        "ratio": null,
        "resolutions": [
          {
            "height": 440,
            "width": 440,
          },
        ],
        "src": "http://placehold.it/300x300",
      }
    }
  />
  <Portal
    name="component.product-image"
    props={
      {
        "ratio": null,
        "resolutions": [
          {
            "height": 440,
            "width": 440,
          },
        ],
        "src": "http://placehold.it/300x300",
      }
    }
  >
    <div
      className="sg-1ffblid-rounded engage__product__product-image"
    >
      <Image
        aria-hidden={true}
        backgroundColor="var(--sg-palette-common-white)"
        className=""
        placeholder={
          <div
            aria-hidden={true}
            className="sg-1k7fitm-placeholderContent"
            data-test-id="placeHolder"
          >
            <Placeholder
              className="sg-1ut7txd-placeholder"
            />
          </div>
        }
        placeholderSrc={null}
        ratio={null}
        resolutions={
          [
            {
              "height": 440,
              "width": 440,
            },
          ]
        }
        src="http://placehold.it/300x300"
      />
    </div>
  </Portal>
  <Portal
    name="component.product-image.after"
    props={
      {
        "ratio": null,
        "resolutions": [
          {
            "height": 440,
            "width": 440,
          },
        ],
        "src": "http://placehold.it/300x300",
      }
    }
  />
</Fragment>
`;

exports[`<ProductImage /> inner shadow should not apply it to the placeholder when the hook says no 1`] = `
<Fragment>
  <Portal
    name="component.product-image.before"
    props={null}
  />
  <Portal
    name="component.product-image"
    props={null}
  >
    <div
      className="sg-1ffblid-rounded engage__product__product-image"
    >
      <Image
        aria-hidden={true}
        backgroundColor="var(--sg-palette-common-white)"
        className=""
        placeholder={
          <ProductImagePlaceholder
            noBackground={false}
            showInnerShadow={false}
            src="http://placehold.it/300x300"
          />
        }
        placeholderSrc="http://placehold.it/300x300"
        ratio={null}
        resolutions={
          [
            {
              "height": 440,
              "width": 440,
            },
          ]
        }
      />
    </div>
  </Portal>
  <Portal
    name="component.product-image.after"
    props={null}
  />
</Fragment>
`;

exports[`<ProductImage /> should render a placeholder if no src prop is provided 1`] = `
<Fragment>
  <Portal
    name="component.product-image.before"
    props={null}
  />
  <Portal
    name="component.product-image"
    props={null}
  >
    <div
      className="sg-1ffblid-rounded engage__product__product-image"
    >
      <Image
        aria-hidden={true}
        backgroundColor="var(--sg-palette-common-white)"
        className=""
        placeholder={
          <div
            aria-hidden={true}
            className="sg-1k7fitm-placeholderContent"
            data-test-id="placeHolder"
          >
            <Placeholder
              className="sg-1ut7txd-placeholder"
            />
          </div>
        }
        placeholderSrc={null}
        ratio={null}
        resolutions={
          [
            {
              "height": 440,
              "width": 440,
            },
          ]
        }
      />
    </div>
  </Portal>
  <Portal
    name="component.product-image.after"
    props={null}
  />
</Fragment>
`;

exports[`<ProductImage /> should render the image without a placeholder 1`] = `
<Fragment>
  <Portal
    name="component.product-image.before"
    props={
      {
        "ratio": null,
        "resolutions": [
          {
            "height": 440,
            "width": 440,
          },
        ],
        "src": "http://placehold.it/300x300",
      }
    }
  />
  <Portal
    name="component.product-image"
    props={
      {
        "ratio": null,
        "resolutions": [
          {
            "height": 440,
            "width": 440,
          },
        ],
        "src": "http://placehold.it/300x300",
      }
    }
  >
    <div
      className="sg-1ffblid-rounded engage__product__product-image"
    >
      <Image
        aria-hidden={true}
        backgroundColor="var(--sg-palette-common-white)"
        className=""
        placeholder={
          <div
            aria-hidden={true}
            className="sg-1k7fitm-placeholderContent"
            data-test-id="placeHolder"
          >
            <Placeholder
              className="sg-1ut7txd-placeholder"
            />
          </div>
        }
        placeholderSrc={null}
        ratio={null}
        resolutions={
          [
            {
              "height": 440,
              "width": 440,
            },
          ]
        }
        src="http://placehold.it/300x300"
      />
    </div>
  </Portal>
  <Portal
    name="component.product-image.after"
    props={
      {
        "ratio": null,
        "resolutions": [
          {
            "height": 440,
            "width": 440,
          },
        ],
        "src": "http://placehold.it/300x300",
      }
    }
  />
</Fragment>
`;
